--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
     <strong>Privacy Policy</strong> <p>
-                  Quang built the Insta Save - Photo Downloader app as
+                  Quang built the 
+        
+        Save - Repost Photo Video app as
                   a Free app. This SERVICE is provided by
                   Quang at no cost and is intended for use as
                   is.
@@ -25,7 +27,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  Insta Save - Photo Downloader unless otherwise defined in this Privacy Policy.
+                  InstaSave - Repost Photo Video unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
