--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <strong>Privacy Policy</strong> <p>
-                  Quang built the 
-        
-        Save - Repost Photo Video app as
-                  a Free app. This SERVICE is provided by
+    <strong>Privacy Policy</strong> <p>This SERVICE is provided by
                   Quang at no cost and is intended for use as
                   is.
                 </p> <p>
@@ -27,7 +23,7 @@
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  InstaSave - Repost Photo Video unless otherwise defined in this Privacy Policy.
+                  our apps unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
