update audio reverser

--- a/audio-reverse-app/index.html
+++ b/audio-reverse-app/index.html
@@ -16,6 +16,7 @@
   <a href="https://itunes.apple.com/app/id1573877516"><img src="appstore-dl.png" width="200"></a>
 </center>
 <p>Read more privacy policy: <a href="https://ngvquangglobal.github.io/audio-reverse-app/privacy-policy.html">https://ngvquangglobal.github.io/audio-reverse-app/privacy-policy.html</a>&nbsp;</p>
+<p>Read more terms of use: <a href="https://ngvquangglobal.github.io/audio-reverse-app/term-of-use.html">https://ngvquangglobal.github.io/audio-reverse-app/term-of-use.html</a>&nbsp;</p>
 <p>Contact us: <a href="mailto:ngvquang.global@gmail.com">ngvquang.global@gmail.com</a></p>
 
   </body>
